[package]
name = "svg_color"
version = "0.1.0"
authors = ["wyhinton <wyhinton189@gmail.com>"]
edition = "2018"
description = "my application"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fltk = { version = "0.16", features = ["enable-glwindow"] }
speedy2d = { version = "1.0.7", git = "https://github.com/QuantumBadger/Speedy2D", default-features = true }
gl = "0.14"